# detectRiskyDates

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
cloudformation/: template.yml
src/lambda/: create_ticker_risk_window.py
src/modules/scraping/: scraping.py
